package ace.projetprogpro.model;

public record Question(String text) {
}
