package ace.projetprogpro.model;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class Response {

    private String answer;

    private Question question;
}
